Fixed Responsiveness Issues on Mobile

--- a/_sass/includes/_header.scss
+++ b/_sass/includes/_header.scss
@@ -52,3 +52,9 @@
         }
     }
 }
+
+@media (max-width: 768px) {
+    .site-header .site-nav {
+        display: none;
+    }
+}
