--- a/_sass/layouts/_index.scss
+++ b/_sass/layouts/_index.scss
@@ -37,13 +37,13 @@
 
 // Pagination
 .pagination .button {
-    margin: 0 1.5em;
+    margin: 0.5em 1.5em;
     i {
         vertical-align: middle;
     }
 }
 
 .pagination {
-    padding: $padding-small $padding-large 0 $padding-large;
+    padding: $padding-small $padding-small 0 $padding-small;
     text-align: center;
 }
