--- a/_sass/layouts/_posts.scss
+++ b/_sass/layouts/_posts.scss
@@ -82,6 +82,7 @@ header {
     }
 
     a {
+        @extend .button-link;
         padding: 2em 3em;
         border: 1px solid rgba(255, 255, 255, 0);
         text-align: center;
@@ -91,11 +92,14 @@ header {
         }
     }
 
-    a.post-exists {
-        @extend .button-link;
-    }
-
     i {
         vertical-align: middle;
+    }
+
+    .post-nav-placeholder {
+        width: 50%;
+        @media screen and (max-width: 576px) {
+            display: none;
+        }
     }
 }
